Fix race condition when new applications open

When opening and closing an application quickly it sometimes got "stuck"
in ksysguard because it was added by ProcessModel while
Processes::processesUpdated() was running, so Processes never processed
it.

BUG: 261255
REVIEW: 128431